NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/CONTAINER_Finished_Product__c.object-meta.xml
<CustomObject>
    <description>Container Finished Products for Integration</description>
    <label>Finished Product</label>
    <nameField>
        <label>CONTAINER Finished Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finished Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>