NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Description__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Description__c</fullName>
    <description>Container Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>