NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Inventory_Unit__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Inventory_Unit__c</fullName>
    <description>Container Inventory Unit</description>
    <label>Inventory Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>