NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Item__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Item__c</fullName>
    <description>Container Finished Product Item</description>
    <externalId>true</externalId>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>