NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Item_Group__c</fullName>
    <description>Container Item Group</description>
    <label>Item Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>