NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Message__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>