NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Line__c</fullName>
    <description>Container Product Line</description>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>