NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Sales_Price__c</fullName>
    <description>COntainer Sales Price</description>
    <label>Sales Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>