NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/fields/CONTAINER_Source_System__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Source_System__c</fullName>
    <description>Container Source System</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>