NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_Item__c</columns>
    <columns>CONTAINER_Item_Group__c</columns>
    <columns>CONTAINER_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>