NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/listViews/CONTAINER_BaaN_Items.listView-meta.xml
<ListView>
    <fullName>CONTAINER_BaaN_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Source_System__c</field>
        <operation>equals</operation>
        <value>LN BaaN</value>
    </filters>
    <label>BaaN Items</label>
    <sharedTo>
        <group>CONTAINER_RSM_APO_Case</group>
        <group>CONTAINER_RSM_EMEA_Case</group>
        <group>CONTAINER_RSM_NAO_Case</group>
        <group>CONTAINER_Sales_Admin</group>
        <group>CONTAINER_Sales_CAM</group>
        <group>CONTAINER_Sales_CAM_GENSET</group>
        <group>CONTAINER_Sales_CAM_NT</group>
        <group>CONTAINER_Sales_CS</group>
        <group>CONTAINER_Sales_CS_GENSET</group>
        <group>CONTAINER_Sales_CS_NT</group>
        <group>CONTAINER_Sales_PM</group>
        <group>CONTAINER_Sales_PM_GENSET</group>
        <group>CONTAINER_Sales_PM_NT</group>
        <group>CONTAINER_Sales_RSD_APO</group>
        <group>CONTAINER_Sales_RSD_EMEA</group>
        <group>CONTAINER_Sales_RSD_NAO</group>
        <group>CONTAINER_Sales_VP</group>
    </sharedTo>
</ListView>