NATTQA-ENV/force-app/main/default/objects/CONTAINER_Finished_Product__c/listViews/JDE_Items_Recently_created_since_30day.listView-meta.xml
<ListView>
    <fullName>JDE_Items_Recently_created_since_30day</fullName>
    <columns>NAME</columns>
    <columns>CONTAINER_Item__c</columns>
    <columns>CONTAINER_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTAINER_Source_System__c</field>
        <operation>equals</operation>
        <value>JDE</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>JDE Items - Recently created since 30day</label>
</ListView>